# doc/api-documentation.yml
@@ -72,6 +72,11 @@ components:
         UserLogin:
       UserToken:
         type: "object"
+        properties:
+          token:
+            type: "string"
+        required:
+            - "token"
       UserTokenRefresh:
       UserTokenRevoke:
       UserTokenVerify:
@@ -120,12 +125,11 @@ components:
       UserLogin:
         type: "object"
         required:
-          - "email"
+          - "username"
           - "password"
         properties:
-          email:
+          username:
             type: "string"
-            format: "email"
           password:
             type: "string"
       Class:
@@ -188,7 +192,7 @@ components:
           $ref: "#/components/schemas/Class"
 openapi: "3.1.0"
 paths:
-  /assignments/{id}:
+  /api/assignments/{id}:
     get:
       summary: "Retrieve an assignment by id"
       description: "Retrieves an assignment by id from the database."
@@ -199,7 +203,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Assignment"
-  /assignments:
+  /api/assignments:
     post:
       summary: "Create a new assignment"
       description: "Create a new assignment in the database"
@@ -233,7 +237,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/Assignments"
-  /users:
+  /api/users:
     get:
       summary: "Get all users"
       description: "Get all users in the database."
@@ -250,7 +254,7 @@ paths:
       application/json:
         schema:
         $ref: "#/components/schemas/UserCreate"
-  /users/{id}:
+  /api/users/{id}:
     get:
       summary: "Get a user by ID"
       description: "Get a user by ID from the database."
@@ -312,7 +316,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/User"
-  /users/login:
+  /api/users/login:
     post:
       summary: "Login a user"
       description: "Login a user and get a token."
@@ -329,7 +333,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/UserToken"
-  /users/create:
+  /api/users/create:
     post:
       summary: "Create a user"
       description: "Create a user and get it's ID."
@@ -339,8 +343,25 @@ paths:
           application/json:
             schema:
               $ref: "#/components/schemas/UserCreate"
+      responses:
+        500:
+          description: "Could not create user."
+          content:
+            application/text:
+              example: "Error creating user."
+        200:
+          description: "User created successfully."
+          content:
+            application/json:
+              schema:
+                type: object
+                properties:
+                  id:
+                    type: "integer"
+                    format: "int64"
+                    example: 1
 
-  /classes:
+  /api/classes:
     get:
       summary: "Get all classes"
       description: "Get all classes in the database."
@@ -360,7 +381,7 @@ paths:
             application/json:
               schema:
                 $ref: "#/components/schemas/ClassCreate"
-  /classes/{id}:
+  /api/classes/{id}:
     delete:
       summary: "Delete a class by ID"
       description: "Delete a class in the database."
